--- a/j.ipynb
+++ b/j.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -53,57 +53,65 @@
     "                        title, n_items, row):\n",
     "        row_append = f'<tr class=\"treegrid-{grandparent}{parent}{expand}\" ' \\\n",
     "                     f'id=\"{ids}\" {style}>' + '\\n' \\\n",
-    "                     f'<td>' + '\\n' \\\n",
+    "                     f'<td style=\"padding: 2; border: 2px solid; ' \\\n",
+    "                                f'text-align: left;\">' + '\\n' \\\n",
     "                     f'<span {collapse} </span>' + '\\n' \\\n",
-    "                     f'{title}' + '\\n' \\\n",
+    "                     f'{title} ' + '\\n' \\\n",
     "                     f'</td>'\n",
     "        color = ''\n",
     "        for key in color_dict.keys():\n",
     "            if key in row:\n",
     "                color = color_dict[key]\n",
     "                break\n",
-    "\n",
     "        td = ''\n",
     "        n_num = 0\n",
+    "        border_last = ''\n",
     "        for n in range(n_items):\n",
     "            if (isinstance(row[n], float)) & (row[n]!=float(0)):\n",
     "                n_num += 1\n",
+    "            if n+1 == n_items:\n",
+    "                border_last= ' border-right: 2px solid;'\n",
     "            if html_formatter.same_check(row): #пустые строки\n",
-    "                td += f'<td style=\"padding: 0; border: 0px solid;\">' + '\\n'\n",
+    "                td += f'<td style=\"padding: 0; border-left: 3px solid {back};border-bottom: 2px solid black;{border_last}\">' + '\\n'\n",
     "            elif row[n] == 100:\n",
     "                css_class = 'class = \"full\"'\n",
-    "                td += f'<td {css_class} style=\"padding: 0; border: 0px solid; background-color: {color};\">' + '\\n'\n",
+    "                td += f'<td {css_class} style=\"padding: 0; border: 1px solid; ' \\\n",
+    "                      f'background-color: {color};{border_last}\">' + '\\n'\n",
     "            elif row[n] == float(0):\n",
     "                css_class = 'class = \"null\"'\n",
-    "                td += f'<td {css_class} style=\"padding: 0; border: 0px solid; background-color: {back};\">' + '\\n'\n",
+    "                td += f'<td {css_class} style=\"padding: 0; border: 1px solid; ' \\\n",
+    "                      f'background-color: {back};{border_last}\">' + '\\n'\n",
     "            elif '|' in str(row[n]):\n",
     "                begin = row[n].split('|')[0]\n",
     "                end = row[n].split('|')[1]\n",
     "                css_class = 'class = \"inter\"'\n",
-    "                td += f'<td {css_class} style=\"padding: 0; border: 0px solid;'\\\n",
+    "                td += f'<td {css_class} style=\"padding: 0; border: 1px solid;'\\\n",
     "                      f' background: linear-gradient(to right, {back} 0%, {back} {begin}%, ' \\\n",
-    "                      f'{color} {begin}%, {color} {end}%, {back} {end}%, {back} 100%);\">' + '\\n'\n",
+    "                      f'{color} {begin}%, {color} {end}%, {back} {end}%, {back} 100%);{border_last}\">' + '\\n'\n",
     "            elif (isinstance(row[n], float)) & (n_num==1):\n",
     "                css_class = 'class = \"start\"'\n",
-    "                td += f'<td {css_class} style=\"padding: 0; border: 0px solid;'\\\n",
+    "                td += f'<td {css_class} style=\"padding: 0; border: 1px solid;'\\\n",
     "                      f' background: linear-gradient(to right, {back} 0%, {back} {100-row[n]}%, ' \\\n",
-    "                      f'{color} {100-row[n]}%, {color} 100%);\">' + '\\n'\n",
+    "                      f'{color} {100-row[n]}%, {color} 100%);{border_last}\">' + '\\n'\n",
     "            elif (isinstance(row[n], float)) & (n_num!=1):\n",
     "                css_class = 'class = \"finish\"'\n",
-    "                td += f'<td {css_class} style=\"padding: 0; border: 0px solid;'\\\n",
+    "                td += f'<td {css_class} style=\"padding: 0; border: 1px solid;'\\\n",
     "                      f' background: linear-gradient(to right, {color} 0%, {color} {row[n]}%, ' \\\n",
-    "                      f'{back} {row[n]}%, {back} 100%);\">' + '\\n'\n",
+    "                      f'{back} {row[n]}%, {back} 100%);{border_last}\">' + '\\n'\n",
     "            else: #обычная ячейка таблицы\n",
-    "                td += f'<td style=\"padding: 0;\">{row[n]}' + '\\n'\n",
+    "                td += f'<td style=\"padding: 1px; border: 2px solid\">{row[n]}' + '\\n'\n",
     "            td += f'</td>'\n",
     "        row_append += td + f'</tr>'\n",
     "        return row_append\n",
     "\n",
     "    def tr_build(self, all_cols):\n",
-    "         tr = '<tr id=\"tree-head-1\">'\n",
+    "\n",
+    "         tr = '<thead>' + '\\n'\\\n",
+    "              '<tr id=\"tree-head-1\">'\n",
     "         for tag in all_cols:\n",
     "            tr += '<th>' + tag + '</th>'\n",
-    "         tr += '</tr>'\n",
+    "         tr += '</tr>' + '\\n'\\\n",
+    "               '</thead>'\n",
     "         return tr\n",
     "\n",
     "    def same_check(self, list):\n",
@@ -207,6 +215,7 @@
     "width = 50 #ширина шкалы прогресса\n",
     "height = 25 #длина шкалы прогресса\n",
     "back = 'azure' #фон диаграммы\n",
+    "font_size = 3 #размер шрифта\n",
     "n_rows = pivot.shape[0]\n",
     "col_begin = pivot.columns.get_loc('Начало')\n",
     "col_end = pivot.columns.get_loc('Окончание')\n",
@@ -252,8 +261,8 @@
     "color_dict = {                         #задание цвета\n",
     "               'Не начат': 'darkgrey',\n",
     "               'Работы не начаты': 'darkgrey',\n",
-    "               'В работе': 'darkblue',\n",
-    "               'Выполняется': 'darkblue',\n",
+    "               'В работе': 'blue',\n",
+    "               'Выполняется': 'blue',\n",
     "               'Новая (не просмотрена) ': 'purple',\n",
     "               'Новая (не просмотрена)': 'purple',\n",
     "               'Просрочена ': 'darkred',\n",
@@ -272,10 +281,11 @@
     "         '<meta charset=\"utf-8\">' + '\\n' \\\n",
     "         '<title>Расписание</title>' + '\\n' \\\n",
     "         '<style>' + '\\n' \\\n",
-    "         'table {'\\\n",
-    "         'border: 0px solid;}'\\\n",
-    "              '.treegrid-indent {width:' + f'{width}px;height: {height}px;display: inline-block;' + '\\n' \\\n",
-    "                                 'position: relative;}' + '\\n' \\\n",
+    "         'table {border-collapse: collapse;'+ '\\n' \\\n",
+    "                'width: 100%;}'+ '\\n' \\\n",
+    "         'thead tr:first-child th {'+ f'position: sticky; top: 0; background-color: {back};' + '}' + '\\n' \\\n",
+    "         'td {text-align: center;}'+ '\\n' \\\n",
+    "         'th {border: solid 2px;}' + '\\n' \\\n",
     "              '.treegrid-expander {width:10px; height: 10px;display: inline-block;' + '\\n' \\\n",
     "                                   'position: relative;}' + '\\n' \\\n",
     "              '.treegrid-expanded ' + '\\n' \\\n",
@@ -285,13 +295,13 @@
     "         '</style>' + '\\n' \\\n",
     "         '</head>' + '\\n' \\\n",
     "         f'<body style=\"background-color: {back};\">' + '\\n' \\\n",
-    "         '<font size=\"2.5\" face=\"Arial\">' + '\\n' \\\n",
+    "         f'<font size=\"{font_size}\" face=\"Helvetica\">' + '\\n' \\\n",
     "         '<table>' + '\\n' \\\n",
     "         '<tbody>' + '\\n' \\\n",
     "         '<tr>' + '\\n' \\\n",
     "         '<td>' + '\\n' \\\n",
-    "         '<table id=\"tree-1\" border=\"1\">' + '\\n' \\\n",
-    "         '<tbody>' + \\\n",
+    "         '<table id=\"tree-1\" border=\"0\">' + '\\n' \\\n",
+    "         '<tbody>' +\\\n",
     "         html_formatter.tr_build(all_cols)\n",
     "footer = '</tbody>' + '\\n' \\\n",
     "         '</table>' + '\\n' \\\n",
