--- a/j.ipynb
+++ b/j.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
     "                     f'<td style=\"padding: 2; border: 2px solid; ' \\\n",
     "                                f'text-align: left;\">' + '\\n' \\\n",
     "                     f'<span {collapse} </span>' + '\\n' \\\n",
-    "                     f'{title} ' + '\\n' \\\n",
+    "                     f'{title} ' + '&#32;&#32;&#32;&#32;&#32;&#32;'*15 + '\\n' \\\n",
     "                     f'</td>'\n",
     "        color = ''\n",
     "        for key in color_dict.keys():\n",
